--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "download": "yarn install",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "publish": "scp -r ./dist/* root@192.168.1.207:/data/ldc"
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
+    "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
+    "less": "4.1.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -29,8 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
+    "less-loader": "^11.0.0",
     "lint-staged": "^11.1.2"
   },
   "eslintConfig": {
