--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "ant-design-vue": "^3.2.10",
+    "axios": "^0.27.2",
     "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
